# ASCII-Renderer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: Entrypoint.md  Framebuffer.md  Math.md  Overview.md  Renderer.md
examples/: moving_square.cpp  rotating_cube.cpp
include/framebuffer/: framebuffer.h
include/math/: mat2.h  mat3.h  vec2.h  vec3.h
include/renderer/: renderer.h
src/framebuffer/: framebuffer.cpp
src/math/: mat2.cpp  mat3.cpp  vec2.cpp  vec3.cpp
src/renderer/: renderer.cpp
tests/: test_main.cpp
tests/math/: mathTest.cpp  mathTest.h
tests/renderer/: rendererTest.cpp  rendererTest.h
